Update headers, configure Repsy upload, and fix bucket name
Add 'tradeId' to the EXPECTED_HEADER in FileHandler. Introduce a bash script and Gradle configuration for uploading artifacts to Repsy.io. Correct the default S3 bucket name in S3ExtractsUploader to 'mochi-prod-trade-extracts'.

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -27,6 +27,9 @@ jobs:
 
       - name: Build with Gradle
         run: ./gradlew clean build
+        env:
+          REPSY_USERNAME: ${{ secrets.REPSY_USERNAME }}
+          REPSY_PASSWORD: ${{ secrets.REPSY_PASSWORD }}
 
       - name: Upload JAR Artifact
         uses: actions/upload-artifact@v4
