--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -63,3 +63,6 @@ jobs:
           context: .
           push: true
           tags: ghcr.io/${{ github.repository }}:latest
+          build-args: |
+            REPSY_USERNAME=${{ secrets.REPSY_USERNAME }}
+            REPSY_PASSWORD=${{ secrets.REPSY_PASSWORD }}
